fixed logo in wordpress site being stuck in corner
had to change every instance of the id="logo" to another name since there was already an element in the wordpress site with the id name of logo

--- a/visualPlayer.css
+++ b/visualPlayer.css
@@ -591,7 +591,7 @@
   font-family: "Nunito", sans-serif;
   color: #ffffffff;
 }
-#logo {
+#DJshowLogo {
   background-size: 100% !important; 
   background-size: contain !important; 
   background-repeat: no-repeat !important;
